--- a/Aakar-Foundation.html
+++ b/Aakar-Foundation.html
@@ -58,7 +58,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="489" data-image-height="85">
+        <a href="https://aakarfoundation.org.np" class="u-image u-logo u-image-1" data-image-width="489" data-image-height="85">
           <img src="images/AakarFoundationLogo_sideways.png" class="u-logo-image u-logo-image-1" data-image-width="345.1765">
         </a>
       </div></header>
@@ -161,7 +161,7 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b2d1"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Aakar Foundation 2021</p>
       </div></footer>
-  
+
     </section>
   </body>
 </html>
