--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="489" data-image-height="85">
+        <a href="https://aakarfoundation.org.np" class="u-image u-logo u-image-1" data-image-width="489" data-image-height="85">
           <img src="images/AakarFoundationLogo_sideways.png" class="u-logo-image u-logo-image-1" data-image-width="345.1765">
         </a>
       </div></header>
